changing a couple of sidebar layout issues.
Using absolute nav position instead of fixed fixes #7 for pedbre.
Still may want to add a toggle back in to free up the mobile real estate more

--- a/whereikeepinfo/static/css/simple-sidebar.css
+++ b/whereikeepinfo/static/css/simple-sidebar.css
@@ -16,9 +16,9 @@
 
 #sidebar-wrapper {
     z-index: 1000;
-    position: fixed;
+    position: absolute;
     left: 250px;
-    width: 250px;
+    width: 150px;
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
@@ -32,7 +32,6 @@
 #page-content-wrapper {
     position: absolute;
     margin-right: 50px;
-    margin-left: 50px;
 }
 
 /* Sidebar Styles */
@@ -40,7 +39,7 @@
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: auto;
     margin: 0;
     padding: 0;
     list-style: none;
